--- a/styles.css
+++ b/styles.css
@@ -39,8 +39,9 @@
     /* Other Variables */
     --border-radius: 0.5rem;
     --box-shadow-navbar: 0 0.1rem 0.5rem 0.1rem var(--primary-color);
-    --box-shadow-primary: 0 0 0.3rem var(--primary-color);
-    --box-shadow-secondary: 0 0 0.3rem var(--secondary-color-dark);
+    /* --box-shadow-primary: 0 0 0.3rem var(--primary-color); */
+    --box-shadow-primary: 0 0 0.5rem 0.1rem var(--primary-color);
+    --box-shadow-secondary: 0 0 0.5rem 0.1rem var(--secondary-color-dark);
     /* Reddish-purple glow */
     --transition-duration: 0.3s;
     --transition-duration-longer: 0.5s;
@@ -603,7 +604,7 @@ footer .container-full {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    gap: 2rem;
+    gap: 1rem;
     flex-grow: 4;
 }
 
@@ -629,7 +630,7 @@ footer .container-full {
 .pricing-summary {
     text-align: center;
     font-size: 1.2rem;
-    line-height: 1.5;
+    line-height: 1.8;
 }
 
 .pricing-summary span {
