--- a/styles.css
+++ b/styles.css
@@ -31,14 +31,14 @@
     /* Neutral Colors */
     --background-color: black;
     /* Very dark gray, almost black */
-    --text-color: #eeeeeee3;
+    --text-color: #f3f3f3;
     /* Very light gray, almost white */
-    --text-color-secondary: #ccc;
+    --text-color-secondary: #919191;
     /* Slightly darker gray for less prominent text */
 
     /* Other Variables */
     --border-radius: 0.5rem;
-    --box-shadow-navbar: 0 0.1rem 0.5rem 0.1rem var(--primary-color);
+    --box-shadow-navbar: 0 0.1rem 0.5rem 0.01rem var(--primary-color);
     /* --box-shadow-primary: 0 0 0.3rem var(--primary-color); */
     --box-shadow-primary: 0 0 0.3rem 0.1rem var(--primary-color);
     --box-shadow-secondary: 0 0 0.3rem 0.1rem var(--secondary-color-dark);
@@ -94,6 +94,7 @@ h1 {
 h2 {
     font-size: 3rem;
     text-align: center;
+    margin-bottom: 1rem;
 }
 
 h3 {
@@ -553,7 +554,8 @@ footer .container-full {
 .calendar-container {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-evenly;
+    /* align-items: stretch; */
     gap: 2rem;
     flex-grow: 4;
 }
@@ -563,42 +565,77 @@ footer .container-full {
     flex-wrap: wrap;
     gap: 2rem;
     justify-content: space-evenly;
-    align-items: stretch;
-    margin-block: 1rem;
-    padding: 1rem;
 }
 
 
-
+/* Day Card */
 .calendar-card {
+    min-width: 250px;
     display: flex;
     flex-direction: column;
-    gap: 2rem;
-    justify-content: center;
-    align-items: stretch;
+    gap: 1rem;
     background-color: var(--background-color);
     border-radius: var(--border-radius);
-    padding: 1rem;
     box-shadow: var(--box-shadow-primary);
-    gap: 1rem;
-    width: 300px;
+    padding: 1.5rem;
+    flex-basis: 25%;
+    /* flex: 1 0 15rem; */
+    /* flex-basis: 15%; */
+    /* flex-shrink: 0; */
+    /* flex-grow: 1; */
+    color: var(--text-color);
+    /* flex-grow: 1; */
+    /* Adjust the flex-basis as needed */
+
 }
 
-.calendar-card h3 {
+.day-heading {
     text-align: center;
+    /* color: var(--primary-color); */
+    /* margin-bottom: 0.5rem; */
+    /* font-size: 1.2em; */
 }
 
-.calendar-classes li {
-    line-height: 2;
+.location-group {
     display: flex;
-    justify-content: space-between;
-    align-items: baseline;
-    gap: 1rem;
+    flex-direction: column;
+    gap: 0.5rem;
+    /* box-shadow: var(--box-shadow-navbar); */
+}
+
+.location-heading {
+    /* font-size: 1em; */
+    color: var(--text-color-secondary);
+    border-bottom: solid 0.2rem var(--primary-color-dark);
+    text-align: right;
+    white-space: nowrap;
+}
+
+.teacher-name {
+    /* font-size: small; */
+    color: var(--text-color-secondary);
+    /* margin-bottom: 0.3rem; */
+    text-align: right;
+}
+
+.class-entry {
+    display: flex;
+    /* justify-content: space-between; */
+    /* align-items: flex-start; */
+    gap: 0.5rem;
 }
 
 .time {
     font-weight: bold;
+    color: var(--secondary-color-light);
+    flex: 0 0 4rem;
 }
+
+.class-name {
+    font-size: 1em;
+    color: var(--text-color);
+}
+
 
 
 .pricing-container {
@@ -625,7 +662,6 @@ footer .container-full {
     gap: 1rem;
 
 }
-
 
 
 .pricing-summary {
@@ -655,7 +691,6 @@ footer .container-full {
     /* flex-basis: 200px; */
     padding-block: 3rem;
     padding-inline: 0.5rem;
-    color: var(--card-text-color);
     /* transition: transform 0.3s ease, box-shadow 0.3s ease; */
 }
 
@@ -766,6 +801,7 @@ lite-youtube {
     box-shadow: var(--box-shadow-primary);
     padding: 1rem;
     text-align: left;
+    background-color: var(--background-color);
 }
 
 .contacts-container {
@@ -898,14 +934,6 @@ footer .container-full {
         margin-inline: auto;
         flex-direction: column;
         z-index: 100;
-        justify-content: flex-start;
-        gap: 1rem;
-        padding-block: 4rem;
-        padding-right: 1rem;
-        /* background: var(--background-color); */
-        background-image: var(--linear-gradient);
-        color: var(--text-color);
-        box-shadow: var(--box-shadow-navbar);
     }
 
     .nav-links.open {
@@ -917,9 +945,11 @@ footer .container-full {
         justify-content: flex-start;
         gap: 1rem;
         padding-top: 4rem;
+        padding-bottom: 2rem;
         background-image: var(--linear-gradient);
         color: var(--text-color);
         border-radius: var(--border-radius);
+        box-shadow: var(--box-shadow-navbar);
     }
 
     #home {
@@ -953,6 +983,7 @@ footer .container-full {
         flex-direction: column;
         gap: 2rem;
     }
+
 }
 
 
